# ChangeLog for sys-apps/calculate-templates
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*calculate-templates-2.2.24-r10 (30 Sep 2011)

  30 Sep 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-templates-2.2.24-r10.ebuild,
  +files/calculate-templates-2.2.24-r10.patch:
  Update for bugfix

*calculate-templates-2.2.24-r6 (29 Sep 2011)

  29 Sep 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-templates-2.2.24-r6.ebuild:
  Fix previous templates

*calculate-templates-2.2.24-r5 (29 Sep 2011)

  29 Sep 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-templates-2.2.24-r5.ebuild,
  +files/calculate-templates-2.2.24-r5.patch:
  Update for features

*calculate-templates-2.2.24-r3 (28 Sep 2011)

  28 Sep 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-templates-2.2.24-r3.ebuild,
  +files/calculate-templates-2.2.24-r3.patch:
  Update for featues

*calculate-templates-2.2.24-r2 (23 Sep 2011)

  23 Sep 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-templates-2.2.24-r2.ebuild,
  +files/calculate-templates-2.2.24-r2.patch:
  Update for feature

  21 Sep 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-templates-2.2.18.ebuild, -calculate-templates-2.2.18-r1.ebuild,
  -calculate-templates-2.2.18-r2.ebuild,
  -files/calculate-templates-2.2.18-fix_corrupting_calculateenv.patch,
  -files/calculate-templates-2.2.18-to_2.2.19_rc2.patch,
  -calculate-templates-2.2.19.ebuild, -calculate-templates-2.2.19-r1.ebuild,
  -calculate-templates-2.2.19-r2.ebuild, -calculate-templates-2.2.19-r3.ebuild,
  -calculate-templates-2.2.19-r4.ebuild,
  -files/calculate-templates-2.2.19_2.2.20_rc1.patch,
  -files/calculate-templates-2.2.19_lvmraid_rc1.patch,
  -files/calculate-templates-2.2.19_scandelay.patch,
  -calculate-templates-2.2.20.ebuild, -calculate-templates-2.2.20-r1.ebuild,
  -calculate-templates-2.2.20-r2.ebuild,