@@ -8,6 +8,7 @@ AUX calculate-templates-2.2.24-r4.patch 37017 RMD160 83231a453ec1e996a89138957dc
 AUX calculate-templates-2.2.24-r5.patch 43300 RMD160 56c136c99d3050c7b32b821d119be7955bd38efa SHA1 2a4b9fc985b612ba2be1976fe4701bc51625b2b6 SHA256 780649b09dfd409d94ea3a50ceb64dbba8e0d4af2cdd85d77c24b310eeb7a296
 AUX calculate-templates-2.2.24-r7.patch 2641 RMD160 9c8ed19017fb1903f688d60379ca1f08953f432d SHA1 84b5278ee5c2d88938c43caa68a88a00d1431a5d SHA256 2c5de5f7446dc9c22f09b93f091e59dbfea99a5b623390b928aa50d828c82697
 AUX calculate-templates-2.2.24-r8.patch 3799 RMD160 b32dca424fcbcbb4d0461f38603cda9c2c22f095 SHA1 18859fba773368c04ab5d919c761d27459ebfe00 SHA256 c6d8529753d957a902674f39abb3c833496f1bd4b5ccaa49db1b46252636df39
+DIST calculate-templates-2.2.24-r14.tar.bz2 248364 RMD160 5e930938c5565a3bf385a749637fab23be7587f3 SHA1 c0109d9751b89f5642ed1ca4c867f5e2622ed919 SHA256 9d854abba9c4a699ff9d794f977dddf6bbbf06e20c1b0a8a461fe50973c999ab
 DIST calculate-templates-2.2.24-r6.tar.bz2 247568 RMD160 df6d8b2cb09c292668528b08382afd563c2e81f7 SHA1 df12ef7a680e76dc13ab2666df8ef84ff4504944 SHA256 b339b318e7dcb5ab045278f0b736fdddd1d5cd53e60c017e73324b7cb23d4d51
 DIST calculate-templates-2.2.24-r9.tar.bz2 248040 RMD160 a4523a32ce2374bb993821f0a7f70d34476ccc69 SHA1 705b710ebbf6110d0aea9c64da4faa4a83208c6d SHA256 87ac54def8fd64491ddaeb613a588393f9670cd6b9c654b90e01deed9c9e1e03
 DIST calculate-templates-2.2.24.tar.bz2 247373 RMD160 eccaa0fb8a02ce6114b9fa24367e5d3ba38b80a4 SHA1 556aa83ce71e2202d9ca66fb6c8b1bc0dfbff44b SHA256 26a3c18c2e18167d4099412e69001cd1f8fd5c2f7165dcd3f24b80701f5d2751
@@ -15,6 +16,8 @@ EBUILD calculate-templates-2.2.24-r1.ebuild 718 RMD160 99d37d439cc2018902fd036ac
 EBUILD calculate-templates-2.2.24-r10.ebuild 880 RMD160 bdfc1ad95592dee49bc6746660f2a5416e49bd77 SHA1 9834d1a30bf5dbfa41de884bb293146a3c3ae05d SHA256 fa832d9d14dbf25e8caaa8aa4872c2c59a34210de3cd8e1263595af0f87d49c6
 EBUILD calculate-templates-2.2.24-r11.ebuild 880 RMD160 d4b3183157e85d5325eafbeee68144f4862f332c SHA1 b20fb387163091dd7aee065d2be5a04089039d27 SHA256 83fff3aed9fa88dd2f688edfd74771eecd18428bcbbf56d20474ed6e334cdcbe
 EBUILD calculate-templates-2.2.24-r12.ebuild 900 RMD160 c217ad4376dbcbc291d0619fad714967702b89a6 SHA1 40302b7edbbae7afe1692993f5166b71d3fe93d4 SHA256 dab2eadaee76ffebee3bb79fab211e9cc818927440e4b99064bc0c603c5b3132
+EBUILD calculate-templates-2.2.24-r13.ebuild 900 RMD160 c217ad4376dbcbc291d0619fad714967702b89a6 SHA1 40302b7edbbae7afe1692993f5166b71d3fe93d4 SHA256 dab2eadaee76ffebee3bb79fab211e9cc818927440e4b99064bc0c603c5b3132
+EBUILD calculate-templates-2.2.24-r14.ebuild 586 RMD160 5f84136e75ae518bb2da02ca84ad3f05c13037c8 SHA1 9bd4a6ef3ae063fcdaaacf166b34a1e48e469824 SHA256 404d358db9e73f32e99af35b643a2646b5736ab980672a972f8ae89cb1e10e55
 EBUILD calculate-templates-2.2.24-r2.ebuild 756 RMD160 adf29c1539951953719d5b83be14f590e437fed6 SHA1 de95021a634954babe1fa0ca35181bf1886381d3 SHA256 78b9eec76d49c5328f0d749167c70ca59c8ce1c1756d59b4dbfdfd8c19b78e43
 EBUILD calculate-templates-2.2.24-r3.ebuild 780 RMD160 17d989eeb58626ec9cd4ab15317ea4a71684066b SHA1 be7388e7eb46fa0d0c9470c8142b984f0006048d SHA256 75f351bd28a216d4442be24df2c8a03409c744b0f4ae867c40c93b336da78541
 EBUILD calculate-templates-2.2.24-r4.ebuild 800 RMD160 da6643dd8795bede79d57fb5b3c577fcb5a784ac SHA1 7d1a022a3bb3133ca79e72c9e940be177fc9e43f SHA256 f00a3e9bac3ec8bf025e44a8f39f79cbe62877bea642fa645de95b7105e829cc
@@ -25,5 +28,5 @@ EBUILD calculate-templates-2.2.24-r8.ebuild 824 RMD160 68a9e89b9805dd598bfaaf460
 EBUILD calculate-templates-2.2.24-r9.ebuild 585 RMD160 466d295a7b46d2b7bcac885e82f7199e12237e52 SHA1 713a7bdc0b36efbb23647504febb9f97509f44b7 SHA256 c189f5f5dbbe5b225e582d03a9ac01081ba7cc239080fa22131063bfea825756
 EBUILD calculate-templates-2.2.24.ebuild 582 RMD160 77c74362587b218b15ad9651903420e3ec01962f SHA1 ea9150e2e0476a8d5236f0388e3cdfd1a268bdf7 SHA256 4d0808a6993e403745b7820596d99cb8d2a206b4938f8ea916c1f305c61d2687
 EBUILD calculate-templates-2.2.9999.ebuild 574 RMD160 0898335742573bd029339ae8682b1676cdc6c91c SHA1 d05a1b5986858e35e7f0618a7660ad8e43bbca43 SHA256 c201dbf1dc238f309993c20148918661f057fe406fdb87ed4ef6c3bca0261427
-MISC ChangeLog 34547 RMD160 19c545b6202065e6a4f979c31aaeee8070fefedd SHA1 df1d2626d2afc8c90a96eb697ac4b8ebe3c72fce SHA256 4201034e1cd8d888e30492824ff95347c31363816323c2a2716aa96fc1182c4e
+MISC ChangeLog 34829 RMD160 8c88c82a0095198a4dd48ef17b49bff8334fdc81 SHA1 0f1b32d71ed6896334224d86253058d1d1ec4e47 SHA256 8fa39a5ef615081937b3d14a84346486332e60adc1e93cac8279bfb5a29cb50a
 MISC metadata.xml 338 RMD160 4a1a51881bdf09b961217d2056114ca4ccb8b4d2 SHA1 5fcb2724427f9ac5dda07abb5c829c24e6db9ae6 SHA256 175d9ae86b71b291a519414e816b05290d0e4be74726cc8d5449a500c51a3b2d
