@@ -6,6 +6,7 @@ EBUILD calculate-utilities-2.2.24-r13.ebuild 886 RMD160 5bd53b7327aadbec836350e1
 EBUILD calculate-utilities-2.2.24-r14.ebuild 886 RMD160 7a5304240ec71f69b181dbc80d278ec251989120 SHA1 9328eca153deee5dffaa8478e5b32e8da365357e SHA256 60a27af30a2d617444ca0bcc99a4dde5ec88d52fa7c45d8ab43611d0ea6a6234
 EBUILD calculate-utilities-2.2.24-r15.ebuild 886 RMD160 65c1492ada189d37beee62cb4f5332199fdd5c4d SHA1 202aba0d8ff899a4ddf9c641ca12046dceba170f SHA256 f31a1520673defdbb114cae3180b471f07a7c171696c3025da69144921277d9a
 EBUILD calculate-utilities-2.2.24-r16.ebuild 886 RMD160 61b0d4ff24facb0d5e61f25ab73141530b015de4 SHA1 b6ac556265dbb487ef0bd6bd166be1b2283800cc SHA256 c49009184b8a35e536c65b553216afd1b8d02459dc9a7b7ea040cd2edab328b2
+EBUILD calculate-utilities-2.2.24-r17.ebuild 886 RMD160 ff32e139fe6f0e207abed92bb423d68ba5e1644e SHA1 47da52aa1f0802689864c4f79ad390fd525670b4 SHA256 49379514add260efde3b3ec5dfae3e55cb8513f80f80443ff6a54d3a54ae6a1a
 EBUILD calculate-utilities-2.2.24-r2.ebuild 867 RMD160 df598038cc6cc3971cab35ed7984a1dd590bec98 SHA1 a77db53bab42d35ae2677224e3ebc0c26a650a59 SHA256 db8f05e541179081778143f3706c10e42febe96c72fe5a2feceefeff73fd5a50
 EBUILD calculate-utilities-2.2.24-r3.ebuild 873 RMD160 8f0b91ade772b6642311b50efd772daa5a4c76cc SHA1 ad4cfb779ce2a85b9dfe6bc040bff73827fce20b SHA256 3d4ea669782aed05bcc33a16117ef01e22c28585e300b751fb5162a13d990901
 EBUILD calculate-utilities-2.2.24-r4.ebuild 873 RMD160 70f067baed3cd831660617cc2d7a5997712b7fa4 SHA1 a307de135d4ab9526036861ef51f9caa8eef0fd4 SHA256 0024670d48e1510cd2a20f28c623d4f72c9963f66b3f723a5c1e55935362088f
@@ -16,4 +17,4 @@ EBUILD calculate-utilities-2.2.24-r8.ebuild 885 RMD160 fc01b867dd5b79294cdf05819
 EBUILD calculate-utilities-2.2.24-r9.ebuild 885 RMD160 64810ea35986869adff8dd3298607985978e6e59 SHA1 5951c55c53517cb66a87276101aac01c9afcf99f SHA256 7a9c5a4e8710dd651474ec505853102858c44bc7bffb9716d3752924297c610c
 EBUILD calculate-utilities-2.2.24.ebuild 861 RMD160 71a8eac35eade9be90df9cacbb5b4d9ba07d3664 SHA1 258da46af67a0e0995074a9c7f01b33234711ca9 SHA256 f1a33869f243365632a9af11ab9ed2538a6b2c183dd9ddbf28d48ad564df3d54
 EBUILD calculate-utilities-2.2.9999.ebuild 840 RMD160 0c7324a9ed480118ac19f62b162c9ee62c25f964 SHA1 7dadab1430ed147334ed7e9b4fcc86dc99e25d56 SHA256 f3ee28f9f765e7302c83eb4a15a09bdf066f09e6b40e34f6d52157a946df5e66
-MISC ChangeLog 28932 RMD160 56cfd4619af1714ba13f20442043a8d9daf88d84 SHA1 eae5956fff03eb3b6fd67fff26f86ebba7a546e1 SHA256 84392a43b207e6805cb16b215feeb9c931616fe2dca66c8aeb1b38954be15284
+MISC ChangeLog 29105 RMD160 ad432a15d4454037a767f34d34b9cc73446bf5cf SHA1 e13ae435c4126dc696718f83c5b8de98a9f2892a SHA256 eb73d14b28033063ad11699b02ffad00916ad99faa51a3eebe7462cca1c099c9
