@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-utilities-2.2.24-r17 (06 Oct 2011)
+
+  06 Oct 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calculate-utilities-2.2.24-r17.ebuild:
+  Update for templates
+
 *calculate-utilities-2.2.24-r16 (03 Oct 2011)
 
   03 Oct 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
