@@ -2,6 +2,14 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-templates-2.2.24-r14 (06 Oct 2011)
+*calculate-templates-2.2.24-r13 (06 Oct 2011)
+
+  06 Oct 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calculate-templates-2.2.24-r13.ebuild,
+  +calculate-templates-2.2.24-r14.ebuild:
+  Update for bug fix portage/package.* dirs
+
 *calculate-templates-2.2.24-r10 (30 Sep 2011)
 
   30 Sep 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
